Fixed textarea stretching bug

--- a/static/example.css
+++ b/static/example.css
@@ -17,8 +17,9 @@ div.play .lines {
   font-size: 14px;
 }
 div.play .input {
-  padding: 10px;
+/*  padding: 10px;
   margin-top: 10px;
+*/
   overflow: hidden;
 }
 div.play .input textarea {
@@ -90,7 +91,7 @@ div.play .buttons a, div.play .buttons span {
 .output .system {
   color: #999;
 }
-#code, .lines {
+#code, .output, .lines {
   font-family: "DejaVu Sans Mono", "Droid Sans Mono", Courier New, monospace;
   font-size: 11pt;
   color: #999;
@@ -103,17 +104,20 @@ div.play .buttons a, div.play .buttons span {
 }
 .lines div {
   padding-right: 5px;
-  color: #555;
+  color: black;
 }
 .lines div:hover {
-  color: #aaa;
+  color: #fff;
   background-color: #222;
 }
 .lines div.lineerror {
   background-color: #000;
-  color: #900;
+  color: black;
 }
+
 #code {
+  overflow-y: scroll;
+  color: black;
 
   width: 100%;
   height: 100%;
@@ -126,4 +130,10 @@ div.play .buttons a, div.play .buttons span {
 
   background: #f0f0f0 url("../pground.jpg") no-repeat top right;
   color:black;
+
+  text-shadow: 0px 0px 4px #f0f0f0, 0px 0px 4px #f0f0f0, 0px 0px 4px #f0f0f0, 0px 0px 4px #f0f0f0, 0px 0px 4px #f0f0f0, 0px 0px 4px #f0f0f0, 0px 0px 4px #f0f0f0;
+}
+#wrap {
+  height: 247px;
+  background-color: #ccc;
 }
